# optimized-calculator

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  calculadora.py  examples.py  index.html  pyproject.toml  requirements-dev.txt  requirements.txt  test_calculadora.py
